	resolution_combo here...
	(rebuild_resolution_combo): ... but do it here instead.  This is
	so that we can match the state of the monitor on/off buttons.
	(rebuild_on_off_radios): New function.  We set the on/off radio
	buttons based on the "on" state of the current output.
	(monitor_on_off_toggled_cb): New callback; we toggle the current
	output's on/off state.

2008-12-18  Federico Mena Quintero  <federico@novell.com>

	* xrandr-capplet.c (select_current_output_from_dialog_position):
	Fix the type of the "output" variable.

==================== 2.25.3 ====================

2008-12-16  Federico Mena Quintero  <federico@novell.com>

	https://bugzilla.novell.com/show_bug.cgi?id=450141 - Help button
	in the Display capplet does nothing.

	* xrandr-capplet.c (run_application): Hide the Help button as we
	have no help to show for this capplet yet.
	(hide_help_button): New function.

2008-12-16  Frederic Peters  <fpeters@0d.be>

	* xrandr-capplet.c: (select_current_output_from_dialog_position):
	Declare variable, fix build.

2008-12-15  Federico Mena Quintero  <federico@novell.com>

	* xrandr-capplet.c (on_screen_changed): Use
	select_current_output_from_dialog_position() instead of selecting
	an output ourselves.

2008-12-15  Federico Mena Quintero  <federico@novell.com>

	* xrandr-capplet.c (select_current_output_from_dialog_position):
	New function.
	(dialog_map_event_cb): New GtkWidget::map-event handler for the
	toplevel dialog.  When the dialog gets mapped, we make the current
	output be the one which actually contains the dialog window, so
	that the user can edit the monitor which he's looking at.

2008-12-15  Federico Mena Quintero  <federico@novell.com>

	* display-capplet.glade: Put the "Monitor" label inside an event
	box, so we can change the background color of the event box.  Give
	names to both widgets: current_monitor_label,
	current_monitor_event_box.

	* xrandr-capplet.c (rebuild_gui): When a monitor is selected,