@@ -21,6 +21,8 @@
 	buttons based on the "on" state of the current output.
 	(monitor_on_off_toggled_cb): New callback; we toggle the current
 	output's on/off state.
+	(rebuild_resolution_combo): Desensitize the resolution combo when
+	the output is off.  Don't add an "Off" item to it, either.
 
 2008-12-18  Federico Mena Quintero  <federico@novell.com>
 
